GNOME Bugzilla – Bug 791602
dashdemux: live streaming @availabilityStartTime xs:dateTime's timezone indicator is not parsed
Last modified: 2017-12-18 13:11:02 UTC
<xs:attribute name="availabilityStartTime" type="xs:dateTime"/> The lexical form of xs:dateTime is YYYY-MM-DDThh:mm:ss[Z|(+|-)hh:mm] currently, timezone indicator (+|-)hh:mm] is not parsed. some content provider, e.g. facebook, instagram, set @availabilityStartTime with timezone. >dashdemux gstmpdparser.c:860:gst_mpdparser_get_xml_prop_dateTime:[00m dateTime: 2017-12-12T23:38:21-08:00, len 25 if timezone not parsed, live edge can not be calculated accurately.
Created attachment 365519 [details] [review] parse xs:dateTime's timezone indicator
commit cbcc01173b296aac109d89f42d59c6e8a170df90 Author: Jun Xie <jun.xie@samsung.com> Date: Thu Dec 14 15:18:38 2017 +0800 dashdemux: parse xs:dateTime's timezone indicator The lexical form of xs:dateTime is YYYY-MM-DDThh:mm:ss[Z|(+|-)hh:mm] timezone indicator (+|-)hh:mm] needs to be parsed. https://bugzilla.gnome.org/show_bug.cgi?id=791602